# textnumberconverter

./: CMakeLists.txt  README.md
CMakeModules/: CodeCoverage.cmake
include/: textnumberconverter.hpp
src/: main.cpp  test.cpp  textnumberconverter.cpp
textNumberConverter_coverage/: index-sort-f.html  index-sort-l.html  index.html
textNumberConverter_coverage/9/: array.func-sort-c.html  array.func.html  array.gcov.html  index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html  utility.func-sort-c.html  utility.func.html  utility.gcov.html
textNumberConverter_coverage/9/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  functional_hash.h.func-sort-c.html  functional_hash.h.func.html  functional_hash.h.gcov.html  hashtable.h.func-sort-c.html  hashtable.h.func.html  hashtable.h.gcov.html  hashtable_policy.h.func-sort-c.html  hashtable_policy.h.func.html  hashtable_policy.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  ptr_traits.h.func-sort-c.html  ptr_traits.h.func.html  ptr_traits.h.gcov.html  stl_algo.h.func-sort-c.html  stl_algo.h.func.html  stl_algo.h.gcov.html  stl_algobase.h.func-sort-c.html  stl_algobase.h.func.html  stl_algobase.h.gcov.html  stl_function.h.func-sort-c.html  (+17 more)
textNumberConverter_coverage/9/ext/: aligned_buffer.h.func-sort-c.html  aligned_buffer.h.func.html  aligned_buffer.h.gcov.html  alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  (+10 more)
(+9 files in other folders)
